Attempt to fix horizontally scrolling drop boxes for product and status on IE7

--- a/web/src/main/webapp/css/ie7.css
+++ b/web/src/main/webapp/css/ie7.css
@@ -75,13 +75,15 @@ table.left_tab_table td
 }
       
 .wide_select {
-	width: 210px;
+	width: 240px;
+	overflow:auto;
 	margin-top: 2px;
 	line-height: 22px;
 }
 
 .wide_select_status {
-	width: 90px;
+	width: 110px;
+	overflow:auto;
 	margin-top: 2px;
 	line-height: 22px;
 }
